# acelab-firm-mapping

./: .gitignore  README.md  SOLUTION.md
artifacts/: mapping-result.json
data/: Acelab-SharedParameters.txt  firm-library.json  mapping-result.example.json  products.json  sample-model.json
docs/: ARCHITECTURE.md  PROPOSE-SELECT-HANDOFF.md  REVIT-ADAPTER-HANDOFF.md
engine/: pyproject.toml
engine/scripts/: bakeoff.py
engine/src/acelab_mapping/: __init__.py  artifact.py  catalog.py  cli.py  confidence.py  decide.py  firm.py  models.py  normalize.py  qualify.py
engine/src/acelab_mapping/decider/: __init__.py  base.py  caching.py  fake.py  openrouter.py
engine/tests/: test_already_specified.py  test_alternatives.py  test_caching.py  test_confidence.py  test_golden.py  test_guardrails.py  test_normalize.py  test_pipeline.py  test_qualify.py
