[project]
name = "acelab-mapping"
version = "0.1.0"
description = "Decision engine that inherits a firm library onto Revit model elements"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "openai>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
